name:                lambduh
version:             0.1.0.0
synopsis:            Minimal untyped lambda calculus
homepage:            github.com/j-rock/lambduh
license:             MIT
license-file:        LICENSE
author:              Joseph Rock
maintainer:          josephwrock@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Language.Lambduh
  build-depends:       base >=4.7 && <4.8,
                       text >=1.2,
                       attoparsec >=0.12
  hs-source-dirs:      src/
  default-language:    Haskell2010
