name:                lambduh
version:             0.1.0.0
synopsis:            Minimal untyped lambda calculus
homepage:            github.com/j-rock/lambduh
license:             MIT
license-file:        LICENSE
author:              Joseph Rock
maintainer:          josephwrock@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Language.Lambduh
  hs-source-dirs:      src/
  build-depends:       base >=4.7 && <4.8,
                       text >=1.2,
                       attoparsec >=0.12
  default-language:    Haskell2010

executable lambduh
  main-is:             Main.hs
  hs-source-dirs:      src/
  build-depends:       base >=4.7 && <4.8,
                       text >=1.2,
                       attoparsec >=0.12
  default-language:    Haskell2010
